<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/card_hourTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/details_date_default"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/title_text_color"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/card_temperatureTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/default_temperature"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/title_text_color"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/card_informationTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/card_temperatureTV"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/default_information"
            android:fontFamily="@font/roboto_thin"
            android:textColor="@color/title_text_color"
            android:textSize="14sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>