<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/details_InfoCL"
        android:layout_width="match_parent"
        android:layout_height="@dimen/weather_card_height"
        android:background="@color/weather_one"
        android:padding="16dp">

        <TextView
            android:id="@+id/details_backTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:drawableStartCompat="@drawable/ic_back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/weather_infoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/card_data_informationTV"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_backTV" />

        <TextView
            android:id="@+id/weather_wind_infoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/details_wind_default"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/weather_wind_info_twoTV"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/weather_wind_info_twoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/details_wind_two_default"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/weather_windTV"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/weather_windTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            app:drawableStartCompat="@drawable/ic_wind_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/weather_info_locationTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/details_location_default"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weather_infoTV" />

        <TextView
            android:id="@+id/weather_humidityTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:drawableStartCompat="@drawable/ic_humidity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weather_windTV" />

        <TextView
            android:id="@+id/weather_humidity_infoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/details_rain_default"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/weather_humidity_info_twoTV"
            app:layout_constraintTop_toTopOf="@id/weather_wind_infoTV" />

        <TextView
            android:id="@+id/weather_humidity_info_twoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/details_rain_two_default"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/weather_humidityTV"
            app:layout_constraintTop_toTopOf="@id/weather_wind_info_twoTV" />

        <TextView
            android:id="@+id/weather_temperature_previousTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/weather_info_locationTV"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/default_temperature"
            android:textColor="@color/white"
            android:textSize="36sp"/>

        <TextView
            android:id="@+id/weather_temperature_nowTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/weather_info_locationTV"
            app:layout_constraintEnd_toStartOf="@id/weather_temperature_nextTV"
            app:layout_constraintStart_toEndOf="@id/weather_temperature_previousTV"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/default_temperature"
            android:textColor="@color/white"
            android:textSize="72sp"/>

        <TextView
            android:id="@+id/weather_temperature_nextTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/weather_humidityTV"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/default_temperature"
            android:textColor="@color/white"
            android:textSize="36sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/details_itemsRV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        tools:listitem="@layout/detail_item_view" />

</LinearLayout>